tests/ui/two_parse_errors.stderr
Error [E0003]: expected a name after a binding keyword, found a number
  --> tests/ui/two_parse_errors.jet:2:9
    |
  2 |     val 1 = 2;
    |         ^
 Why: names start with a letter or `_`
 Fix: e.g. `main`, `count`, `_tmp`

Error [E0003]: expected `=` in a binding, found `==`
  --> tests/ui/two_parse_errors.jet:3:11
    |
  3 |     val y == 3;
    |           ^^
 Why: the structure here isn't what the compiler expected
 Fix: use `=` in a binding
