tests/ui/two_parse_errors.lex
fn main() {
    val 1 = 2;
    val y == 3;
    print("ok");
}
